--- a/L1/index.html
+++ b/L1/index.html
@@ -6,7 +6,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sattva : Mental Health and Wellness Corner::</title>
+    <title>Sattva : Mental Health and Wellness Corner</title>
     <!-- favicons Icons -->
     <link rel="icon" href="assets/images/home-page/favicon.png" />
 
