--- a/L1/index.html
+++ b/L1/index.html
@@ -256,7 +256,7 @@
                     <div class="col-xl-8 col-lg-7">
                         <div class="about-one__right">
                             <div class="section-title text-left">
-                                <span class="section-title__tagline">welcome to Sattva</span>
+                                <!--<span class="section-title__tagline">welcome to Sattva</span>-->
                                 <h2 class="section-title__title">I’m Dr. <span>Yashika Nathani</span>
                                     <br> Your Psychiatrist </h2>
                             </div>
@@ -338,6 +338,59 @@
             </div>
         </section>
         <!--About One End-->
+
+        <!--Feature Three Start-->
+        <section class="feature-three">
+            <div class="container">
+                <div class="row">
+                    <!--Feature Three Single Start-->
+                    <div class="col-xl-6 col-lg-6 wow fadeInUp" data-wow-delay="100ms">
+                        <div class="feature-three__single">
+                            <div class="feature-three__img-box">
+                                <div class="feature-three__img">
+                                    <img src="assets/images/resources/feature-3-1.jpg" alt="">
+                                </div>
+                            </div>
+                            <div class="feature-three__content">
+                                <!--<p class="feature-three__sub-title">COUPLE ISSUES</p>-->
+                                <h3 class="feature-three__title">
+                                    <a href="#">
+                                        Why should you consult a mental health expert ?
+                                    </a>
+                                </h3>
+                                <div class="feature-three__btn">
+                                    <a href="#"><span class="icon-right-arrow"></span>More</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!--Feature Three Single End-->
+                    <!--Feature Three Single Start-->
+                    <div class="col-xl-6 col-lg-6 wow fadeInUp" data-wow-delay="200ms">
+                        <div class="feature-three__single">
+                            <div class="feature-three__img-box">
+                                <div class="feature-three__img">
+                                    <img src="assets/images/resources/feature-3-2.jpg" alt="">
+                                </div>
+                            </div>
+                            <div class="feature-three__content">
+                                <!--<p class="feature-three__sub-title">COUPLE ISSUES</p>-->
+                                <h3 class="feature-three__title">
+                                    <a href="#">
+                                        Know more about our wellness activity
+                                    </a>
+                                </h3>
+                                <div class="feature-three__btn">
+                                    <a href="#"><span class="icon-right-arrow"></span>More</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!--Feature Three Single End-->
+                </div>
+            </div>
+        </section>
+        <!--Feature Three End-->
 
         <!--feature One Start-->
         <section class="feature-one">
