--- a/L1/depression-service.html
+++ b/L1/depression-service.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 <meta http-equiv="content-type" content="text/html;charset=utf-8" />
@@ -243,7 +243,9 @@
                             </div>
                             <h3 class="services-details__title-1">Depression</h3>
                             <p class="services-details__text-1">Depression is a mental health disorder characterized by persistent feelings of sadness, hopelessness, and a lack of interest or pleasure in daily activities. It can also lead to various physical and cognitive symptoms, affecting sleep, appetite, energy levels, concentration, and overall well-being. Depression is a common and treatable condition often addressed through psychotherapy, medication, or a combination of both.</p>
-                            <h3 class="services-details__title-2">Our therapies can improve your self esteem.</h3>
+                            <h3 class="services-details__title-1">Depression</h3>
+                            <p class="services-details__text-1">Depression is a mental health disorder characterized by persistent feelings of sadness, hopelessness, and a lack of interest or pleasure in daily activities. It can also lead to various physical and cognitive symptoms, affecting sleep, appetite, energy levels, concentration, and overall well-being. Depression is a common and treatable condition often addressed through psychotherapy, medication, or a combination of both.</p>
+                            <!--<h3 class="services-details__title-2">Our therapies can improve your self esteem.</h3>
                             <p class="services-details__text-2">Assessment: Understand the client's history and symptoms.<br>
                                 Therapeutic Alliance: Build a trusting relationship between therapist and client.<br>
                                 Psychoeducation: Educate about depression and reduce stigma.<br>
@@ -253,7 +255,7 @@
                                 Interpersonal Therapy (IPT): Improve relationships and communication skills.<br>
                                 Medication: Prescribed if necessary, closely monitored by a psychiatrist.<br>
                                 Regular Assessment and Adjustment: Continually assess progress and modify the treatment plan.<br>
-                                Relapse Prevention: Develop strategies to maintain mental health beyond therapy.</p>
+                                Relapse Prevention: Develop strategies to maintain mental health beyond therapy.</p>-->
                             <h3 class="services-details__title-3">Our Therapy Process</h3>
                             <ul class="services-details__process list-unstyled">
                                 <li>
