--- a/L1/why-us-sattva.html
+++ b/L1/why-us-sattva.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 <meta http-equiv="content-type" content="text/html;charset=utf-8" />
@@ -220,26 +220,6 @@
                                 <div class="comment-one__content col-lg-9 col-12">
                                     <!-- Text content for the first post -->
                                     <h4>Personal & Individual Therapy</h4>
-                                    <p>Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon....</p>
-                                </div>
-                            </div>
-                            <div class="comment-one__single row">
-                                <div class="comment-one__content col-lg-9 col-12">
-                                    <!-- Text content for the second post -->
-                                    <h4>Special Session for Schizophrenia</h4>
-                                    <p>Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon....</p>
-                                </div>
-                                <div class="comment-one__image col-lg-3 col-12"> 
-                                    <img src="assets/images/new/2ndservice.jpg" class="w-100" alt=""> 
-                                </div>
-                            </div>
-                            <div class="comment-one__single row">
-                                <div class="comment-one__image col-lg-3 col-12">
-                                     <img src="assets/images/new/WhatsApp Image 2024-01-18 at 3.36.48 PM.jpg" class="w-100" alt=""> 
-                                    </div>
-                                <div class="comment-one__content col-lg-9 col-12">
-                                    <!-- Text content for the third post -->
-                                    <h4>Boost the Mind Wellness</h4>
                                     <p>Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon....</p>
                                 </div>
                             </div>
