--- a/L1/why-us-sattva.html
+++ b/L1/why-us-sattva.html
@@ -208,6 +208,7 @@
         <!--feature One Start-->
        <!-- Freight Services Details -->
        <section class="blog-details">
+           <h2 class="text-center pb-30">Why should you consult a mental health expert ?</h2>
         <div class="container">
             <div class="row">
                 <div class="col-xl-12 col-lg-12 col-12">
@@ -219,7 +220,7 @@
                                     </div>
                                 <div class="comment-one__content col-lg-9 col-12">
                                     <!-- Text content for the first post -->
-                                    <h4>Personal & Individual Therapy</h4>
+                                    <h4>Reasons for consulting a psychiatrist</h4>
                                     <p>Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon....</p>
                                 </div>
                             </div>
