--- a/L1/anxiety.html
+++ b/L1/anxiety.html
@@ -186,7 +186,7 @@
             </div>
             <div class="container">
                 <div class="page-header__inner">
-                    <h2>Pychosis</h2>
+                    <h2>Anxiety</h2>
                     <ul class="thm-breadcrumb list-unstyled">
                         <li><a href="index.html">Home</a></li>
                         <li><span>/</span></li>
@@ -207,10 +207,10 @@
                                     <li>
                                         <a href="depression-service.html">Mood Disorders</a>
                                     </li>
-                                    <li class="active">
+                                    <li>
                                         <a href="schizophrenia-service.html">Pychosis</a>
                                     </li>
-                                    <li>
+                                    <li class="active">
                                         <a href="alcohol-de-addiction.html">Anxiety</a>
                                     </li>
                                     <li>
@@ -253,107 +253,28 @@
                             <div class="services-details__img">
                                 <img src="assets/images/new/schizophreniaaa.jpg" alt="">
                             </div>
-                            <h3 class="services-details__title-1">Evaluation</h3>
-                            <p class="services-details__text-1">As with any other medical or psychiatric condition, the interview is of the utmost importance for guiding the treatment plan. As usual, one starts by obtaining a thorough history. The history should include but is not limited to the following: timeline and severity of symptoms, prior psychiatric history/conditions, hospitalizations, previous medical history/conditions, medications taken (psychiatric and non-psychiatric), history of substance use, detailed social history, history of trauma (emotional, physical, sexual), suicidal ideation with prior attempts, auditory/visual hallucinations</p>
-                            <p class="services-details__text-1 mt-20">Of equal importance to the history, and an indispensable component of the psychiatric interview is the mental status exam (MSE). One must make a careful observation regarding the patient’s appearance, behavior, speech, mood, affect, thought process, and thought content.</p>
-                            <p class="services-details__text-1 mt-20">Of equal importance to the history, and an indispensable component of the psychiatric interview is the mental status exam (MSE). One must make a careful observation regarding the patient’s appearance, behavior, speech, mood, affect, thought process, and thought content.</p>
-                            <div class="row">
-                                <div class="col-xl-6 col-lg-6">
-                                    <ul class="services-details__benefit-points list-unstyled mt-20">
-                                        <li>
-                                            <div class="icon">
-                                                <span class="fa fa-check"></span>
-                                            </div>
-                                            <div class="text">
-                                                <p>Complete blood count and metabolic panel</p>
-                                            </div>
-                                        </li>
-                                        <li>
-                                            <div class="icon">
-                                                <span class="fa fa-check"></span>
-                                            </div>
-                                            <div class="text">
-                                                <p>Urinalysis, urine cultures</p>
-                                            </div>
-                                        </li>
-                                        <li>
-                                            <div class="icon">
-                                                <span class="fa fa-check"></span>
-                                            </div>
-                                            <div class="text">
-                                                <p>Thyroid-stimulating hormone (TSH), T3, T3</p>
-                                            </div>
-                                        </li>
-                                        <li>
-                                            <div class="icon">
-                                                <span class="fa fa-check"></span>
-                                            </div>
-                                            <div class="text">
-                                                <p>Liver function tests</p>
-                                            </div>
-                                        </li>
-                                        <li>
-                                            <div class="icon">
-                                                <span class="fa fa-check"></span>
-                                            </div>
-                                            <div class="text">
-                                                <p>Vitamin B12</p>
-                                            </div>
-                                        </li>
 
-                                    </ul>
-                                </div>
-                                <div class="col-xl-6 col-lg-6">
-                                    <ul class="services-details__benefit-points list-unstyled mt-20">
-
-                                        <li>
-                                            <div class="icon">
-                                                <span class="fa fa-check"></span>
-                                            </div>
-                                            <div class="text">
-                                                <p>HIV</p>
-                                            </div>
-                                        </li>
-                                        <li>
-                                            <div class="icon">
-                                                <span class="fa fa-check"></span>
-                                            </div>
-                                            <div class="text">
-                                                <p>CT, MRI</p>
-                                            </div>
-                                        </li>
-                                        <li>
-                                            <div class="icon">
-                                                <span class="fa fa-check"></span>
-                                            </div>
-                                            <div class="text">
-                                                <p>EEG</p>
-                                            </div>
-                                        </li>
-                                        <li>
-                                            <div class="icon">
-                                                <span class="fa fa-check"></span>
-                                            </div>
-                                            <div class="text">
-                                                <p>Lumbar puncture</p>
-                                            </div>
-                                        </li>
-                                        <li>
-                                            <div class="icon">
-                                                <span class="fa fa-check"></span>
-                                            </div>
-                                            <div class="text">
-                                                <p>Rheumatologic or immunologic workup</p>
-                                            </div>
-                                        </li>
-                                    </ul>
-                                </div>
-                            </div>
-                            <p class="services-details__text-2 mt-20">
-                                Antipsychotic medications are the gold-standard treatment for psychotic episodes and disorders, and the choice, dosing, and administration of the medication will largely depend on the scenario.</p>
-                            <p class="services-details__text-2 mt-20">
-                                Along with medications, family and caregivers also play an important role in the management of a psychotic patient, including providing a safe and therapeutic environment for the patient, as well as interacting with them in and calm, empathetic manner.
-                            </p>
+                            <p class="services-details__text-1 mt-20">Anxiety may be defined as apprehension, tension, or uneasiness that stems from the anticipation of danger, which may be internal or external .</p>
+                            <h3 class="services-details__title-1">Difference between Fear and anxiety</h3>
+                            <p class="services-details__text-1 mt-20">Fear is an emotional reaction to a real and consciously recognized threat and anxiety as being a fear response when reality does not justify such a response, it is important to remember that the manifestations of anxiety and fear in the body are the same.</p>
+                            <h3 class="services-details__title-1">Basic Science behind it</h3>
+                            <p class="services-details__text-1 mt-20">Anxiety is sometimes referred to as the psychological equivalent of physical pain. It is apparent that the mind has difficulty dealing with strongly conflicting emotions. One mental mechanism that the mind uses to deal with such conflict is repression. In the process of repression, the mind simply blocks out one side of the conflicting emotions. When this act of repression is not entirely successful, the repressed material is constantly struggling to erupt into consciousness. The anxiety felt by the patient is often closely correlated with the amount of mental effort spent in keeping this material out of consciousness. A number of mental maneuvers, referred to as defense mechanisms, are utilized in the effort to prevent repressed material from reaching consciousness. </p>
+                            <p class="services-details__text-1 mt-20">One reason that extensive utilization of defense mechanisms creates problems for patients is that such use tends to distort reality. The patient forced to block out one side of a conflict has created a situation that limits the ability to see all aspects of a problem. This, in turn, makes it difficult to choose the most appropriate solution for difficulties.</p>
+                            <h3 class="services-details__title-1">Characteristic Symptoms Pathological Anxiety</h3>
+                            <p class="services-details__text-1 mt-20">Cognitive symptoms: fear of losing control; fear of physical injury or death; fear of "going crazy"; fear of negative evaluation by others; frightening thoughts, mental images, or memories; perception of unreality or detachment; poor concentration, confusion, distractible; narrowing of attention, hypervigilance for threat; poor memory; and difficulty speaking.</p>
+                            <p class="services-details__text-1 mt-20">Cognitive symptoms: fear of losing control; fear of physical injury or death; fear of "going crazy"; fear of negative evaluation by others; frightening thoughts, mental images, or memories; perception of unreality or detachment; poor concentration, confusion, distractible; narrowing of attention, hypervigilance for threat; poor memory; and difficulty speaking.</p>
+                            <p class="services-details__text-1 mt-20">Behavioral symptoms: avoidance of threat cues or situations; escape, flight; pursuit of safety, reassurance; restlessness, agitation, pacing; hyperventilation; freezing, motionless; and difficulty speaking.</p>
+                            <p class="services-details__text-1 mt-20">Behavioral symptoms: avoidance of threat cues or situations; escape, flight; pursuit of safety, reassurance; restlessness, agitation, pacing; hyperventilation; freezing, motionless; and difficulty speaking.</p>
+                            <h5 class="services-details__text-1 mt-20">Anxiety Disorders as defined in the Diagnostic and Statistical Manual of Mental Disorders (5th ed.; DSM–5; American Psychiatric Association, 2013):</h5>
+                            <p class="services-details__text-1 mt-20"><strong style="color:#50235d">Separation Anxiety Disorder:</strong> An individual with separation anxiety disorder displays anxiety and fear atypical for his/her age and development level of separation from attachment figures. There is persistent and excessive fear or anxiety about harm to, loss of, or separation from attachment figures. The symptoms include nightmares and physical symptoms. Although the symptoms develop in childhood, they can be expressed throughout adulthood as well.</p>
+                            <p class="services-details__text-1 mt-20"><strong style="color:#50235d">Selective Mutism:</strong> This disorder is characterized by a consistent failure to speak in social situations where there is an expectation to speak even though the individual speaks in other circumstances, can speak, and comprehends the spoken language. The disorder is more likely to be seen in young children than in adolescents and adults.</p>
+                            <p class="services-details__text-1 mt-20"><strong style="color:#50235d">Specific Phobia:</strong> Individuals with specific phobias are fearful or anxious about specific objects or situations which they avoid or endure with intense fear or anxiety. The fear, anxiety, and avoidance are almost always immediate and tend to be persistently out of proportion to the actual danger posed by the specific object or situation. There are different types of phobias: animal, blood-injection-injury, and situational.</p>
+                            <p class="services-details__text-1 mt-20"><strong style="color:#50235d">Social Anxiety Disorder:</strong> This disorder is characterized by marked or intense fear or anxiety of social situations in which one could be the subject of scrutiny. The individual fears that he/she will be negatively evaluated in such circumstances. He/she also fears being embarrassed, rejected, humiliated or offending others. These situations always provoke fear or anxiety and are avoided or endured with intense fear and anxiety.</p>
+                            <p class="services-details__text-1 mt-20"><strong style="color:#50235d">Panic Disorder:</strong> Individuals with this disorder experience recurrent, unexpected panic attacks and experience persistent concern and worry about having another panic attack. They also have changes in their behavior linked to panic attacks which are maladaptive, such as avoidance of activities and situations to prevent the occurrence of panic attacks. Panic attacks are abrupt surges of intense fear or extreme discomfort that reach a peak within minutes, accompanied by physical and cognitive symptoms such as palpitations, sweating, shortness of breath, fear of going crazy, or fear of dying. Panic attacks can occur unexpectedly with no obvious trigger, or they may be expected, such as in response to a feared object or situation.</p>
+                            <p class="services-details__text-1 mt-20"><strong style="color:#50235d">Agoraphobia:</strong> Individuals with this disorder are fearful and anxious in two or more of the following circumstances: using public transportation, being in open spaces, being in enclosed spaces like shops and theaters, standing in line or being in a crowd, or being outside of the home alone. The individual fears and avoids these situations because he/she is concerned that escape may be difficult or help may not be available in the event of panic-like symptoms, or other incapacitating or embarrassing symptoms (e.g., falling or incontinence).</p>
+                            <p class="services-details__text-1 mt-20"><strong style="color:#50235d">Generalized Anxiety Disorder:</strong> The key feature of this disorder is persistent and excessive worry about various domains, including work and school performance, that the individual finds hard to control. The person also may experience feeling restless, keyed up, or on edge; being easily fatigued; difficulty concentrating or mind going blank; irritability, muscle tension, and sleep disturbance.</p>
+                            <p class="services-details__text-1 mt-20"><strong style="color:#50235d">Substance/Medication-Induced Anxiety Disorder:</strong> This disorder involves anxiety symptoms due to substance intoxication or withdrawal or to medical treatment.</p>
+                            <p class="services-details__text-1 mt-20"><strong style="color:#50235d">Anxiety Disorder Due to Other Medical Conditions:</strong> Anxiety symptoms are the physiological consequence of another medical condition. Examples include endocrine disease: hypothyroidism, hypoglycemia, and hypercortisolism; cardiovascular disorders: congestive heart failure, arrhythmia, and pulmonary embolism; respiratory illness: asthma and pneumonia; metabolic disturbances: B12 or porphyria; neurological illnesses: neoplasms, encephalitis, and seizure disorder.</p>
                         </div>
                     </div>
 
