--- a/L1/childhood-disorders.html
+++ b/L1/childhood-disorders.html
@@ -186,7 +186,7 @@
             </div>
             <div class="container">
                 <div class="page-header__inner">
-                    <h2>Pychosis</h2>
+                    <h2>Childhood Disorders</h2>
                     <ul class="thm-breadcrumb list-unstyled">
                         <li><a href="index.html">Home</a></li>
                         <li><span>/</span></li>
@@ -207,7 +207,7 @@
                                     <li>
                                         <a href="depression-service.html">Mood Disorders</a>
                                     </li>
-                                    <li class="active">
+                                    <li>
                                         <a href="schizophrenia-service.html">Pychosis</a>
                                     </li>
                                     <li>
@@ -216,7 +216,7 @@
                                     <li>
                                         <a href="mood-disorder.html">Addictions</a>
                                     </li>
-                                    <li>
+                                    <li class="active">
                                         <a href="depression-service.html">Childhood Disorders</a>
                                     </li>
                                     <li>
@@ -251,109 +251,43 @@
                     <div class="col-xl-8 col-lg-7">
                         <div class="services-details__right">
                             <div class="services-details__img">
-                                <img src="assets/images/new/schizophreniaaa.jpg" alt="">
+                                <img src="assets/images/new-home/childhood-disorders/banner.jpg" alt="">
                             </div>
-                            <h3 class="services-details__title-1">Evaluation</h3>
-                            <p class="services-details__text-1">As with any other medical or psychiatric condition, the interview is of the utmost importance for guiding the treatment plan. As usual, one starts by obtaining a thorough history. The history should include but is not limited to the following: timeline and severity of symptoms, prior psychiatric history/conditions, hospitalizations, previous medical history/conditions, medications taken (psychiatric and non-psychiatric), history of substance use, detailed social history, history of trauma (emotional, physical, sexual), suicidal ideation with prior attempts, auditory/visual hallucinations</p>
-                            <p class="services-details__text-1 mt-20">Of equal importance to the history, and an indispensable component of the psychiatric interview is the mental status exam (MSE). One must make a careful observation regarding the patient’s appearance, behavior, speech, mood, affect, thought process, and thought content.</p>
-                            <p class="services-details__text-1 mt-20">Of equal importance to the history, and an indispensable component of the psychiatric interview is the mental status exam (MSE). One must make a careful observation regarding the patient’s appearance, behavior, speech, mood, affect, thought process, and thought content.</p>
-                            <div class="row">
-                                <div class="col-xl-6 col-lg-6">
-                                    <ul class="services-details__benefit-points list-unstyled mt-20">
-                                        <li>
-                                            <div class="icon">
-                                                <span class="fa fa-check"></span>
-                                            </div>
-                                            <div class="text">
-                                                <p>Complete blood count and metabolic panel</p>
-                                            </div>
-                                        </li>
-                                        <li>
-                                            <div class="icon">
-                                                <span class="fa fa-check"></span>
-                                            </div>
-                                            <div class="text">
-                                                <p>Urinalysis, urine cultures</p>
-                                            </div>
-                                        </li>
-                                        <li>
-                                            <div class="icon">
-                                                <span class="fa fa-check"></span>
-                                            </div>
-                                            <div class="text">
-                                                <p>Thyroid-stimulating hormone (TSH), T3, T3</p>
-                                            </div>
-                                        </li>
-                                        <li>
-                                            <div class="icon">
-                                                <span class="fa fa-check"></span>
-                                            </div>
-                                            <div class="text">
-                                                <p>Liver function tests</p>
-                                            </div>
-                                        </li>
-                                        <li>
-                                            <div class="icon">
-                                                <span class="fa fa-check"></span>
-                                            </div>
-                                            <div class="text">
-                                                <p>Vitamin B12</p>
-                                            </div>
-                                        </li>
+                            <h3 class="services-details__title-1">Childhood Psychiatric Disorders</h3>
+                            <p class="services-details__text-1"><strong style="color:#50235d">Psychotherapy (“talk therapy”) :</strong> There are many different approaches to psychotherapy, including structured psychotherapies directed at specific conditions.. Effective psychotherapy for children always includes:</p>
+                            <ul class="services-details__benefit-points list-unstyled mt-20">
+                                <li>
+                                    <div class="icon">
+                                        <span class="fa fa-check"></span>
+                                    </div>
+                                    <div class="text">
+                                        <p>Parent involvement in the treatment</p>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="icon">
+                                        <span class="fa fa-check"></span>
+                                    </div>
+                                    <div class="text">
+                                        <p>Teaching the child skills to practice at home or school (between-session "homework assignments")</p>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="icon">
+                                        <span class="fa fa-check"></span>
+                                    </div>
+                                    <div class="text">
+                                        <p>Measures of progress (such as rating scales and improvements on “homework assignments”) that are tracked over time.</p>
+                                    </div>
+                                </li>
+                            </ul>
+                            <p class="services-details__text-1 mt-20"><strong style="color:#50235d">Medications :</strong> As with adults, the type of medicines used for children depends on the diagnosis and may include antidepressants, stimulants, mood stabilizers, or other medications.</p>
+                            <p class="services-details__text-1 mt-20"><strong style="color:#50235d">Family counseling :</strong> Including family members in treatment can help them to understand how a child's challenges may affect relationships with parents and siblings.</p>
+                            <p class="services-details__text-1 mt-20"><strong style="color:#50235d">Support for parents :</strong> Individual or group sessions for parents that include training and the opportunity to talk with other parents can provide new strategies for supporting a child and managing difficult behavior in a positive way. The therapist also can coach parents on how to communicate and work with schools on accommodations.</p>
+                            
 
-                                    </ul>
-                                </div>
-                                <div class="col-xl-6 col-lg-6">
-                                    <ul class="services-details__benefit-points list-unstyled mt-20">
-
-                                        <li>
-                                            <div class="icon">
-                                                <span class="fa fa-check"></span>
-                                            </div>
-                                            <div class="text">
-                                                <p>HIV</p>
-                                            </div>
-                                        </li>
-                                        <li>
-                                            <div class="icon">
-                                                <span class="fa fa-check"></span>
-                                            </div>
-                                            <div class="text">
-                                                <p>CT, MRI</p>
-                                            </div>
-                                        </li>
-                                        <li>
-                                            <div class="icon">
-                                                <span class="fa fa-check"></span>
-                                            </div>
-                                            <div class="text">
-                                                <p>EEG</p>
-                                            </div>
-                                        </li>
-                                        <li>
-                                            <div class="icon">
-                                                <span class="fa fa-check"></span>
-                                            </div>
-                                            <div class="text">
-                                                <p>Lumbar puncture</p>
-                                            </div>
-                                        </li>
-                                        <li>
-                                            <div class="icon">
-                                                <span class="fa fa-check"></span>
-                                            </div>
-                                            <div class="text">
-                                                <p>Rheumatologic or immunologic workup</p>
-                                            </div>
-                                        </li>
-                                    </ul>
-                                </div>
-                            </div>
-                            <p class="services-details__text-2 mt-20">
-                                Antipsychotic medications are the gold-standard treatment for psychotic episodes and disorders, and the choice, dosing, and administration of the medication will largely depend on the scenario.</p>
-                            <p class="services-details__text-2 mt-20">
-                                Along with medications, family and caregivers also play an important role in the management of a psychotic patient, including providing a safe and therapeutic environment for the patient, as well as interacting with them in and calm, empathetic manner.
-                            </p>
+                            <p class="services-details__text-1 mt-20"><strong style="color:#50235d">Working with School :</strong> Children who have behavioral or emotional challenges that interfere with success in school may benefit from plans or accommodations provided under laws that prevent discrimination against children with disabilities. Your child’s health care providers can help you communicate with the school.</p>
+                            <p class="services-details__text-1 mt-20">Accommodations might include measures such as providing a child with a tape recorder for taking notes, allowing more time for tests, or adjusting seating in the classroom to reduce distraction.</p>
                         </div>
                     </div>
 
