--- a/L1/addiction.html
+++ b/L1/addiction.html
@@ -390,7 +390,7 @@
                                                 <p class="services-details__text-1 mt-20">These behaviors are normal and a part of a normal lifestyle, but when a person starts feeling a compulsive need to engage in them, feels obsessed and unable to control themselves, and keeps engaging in the behavior even though it’s causing them harm, then it can be thought of as behavioral addiction.</p>
                                                 <p class="services-details__text-1 mt-20">For example, a person might feel a compulsion to gamble, even though they are going deep into debt and experiencing social difficulties because of it. Or the individual who can’t control their urge to eat, even though it’s causing serious health problems.</p>
 
-                                                <h3 class="services-details__title-2">The complications of substance use are broad. </h3>
+                                                <h3 class="services-details__title-2">The complications of substance use are broad</h3>
                                                 <p class="services-details__text-1 mt-20">Substance use will impact multiple systems of the body, including but not limited to neurologic, endocrine, psychiatric, cardiopulmonary, hepatic, hematologic, and immunologic. These problems include but not limited to are: </p>
                                                 <ul class="services-details__benefit-points list-unstyled mt-20">
                                                     <li>
