--- a/L1/geriatric-disorders.html
+++ b/L1/geriatric-disorders.html
@@ -482,13 +482,21 @@
                                 </li>
                             </ul>
                             <p class="services-details__text-1 mt-20"><strong style="color:#50235d">In addition, some medications can help manage dementia symptoms:</strong></p>
+                            <p class="services-details__text-1 mt-20">Cholinesterase inhibitors like donepezil are used to treat Alzheimer disease.</p>
+                            <p class="services-details__text-1 mt-20">NMDA receptor antagonists like memantine are used for severe Alzheimer disease and vascular dementia.</p>
+                            <p class="services-details__text-1 mt-20">Medicines to control blood pressure and cholesterol can prevent additional damage to the brain due to vascular dementia.</p>
+                            <p class="services-details__text-1 mt-20">Selective serotonin reuptake inhibitors (SSRIs) can help with severe symptoms of depression in people living with dementia if lifestyle and social changes don’t work, but  these should not be the first option.</p>
+                            <p class="services-details__text-1 mt-20">If people living with dementia are at risk of hurting themselves or others, medicines like haloperidol and risperidone can help, but these should never be used as the first treatment</p>
+
+                            <h3 class="services-details__title-1">Self-care</h3>
+                            <p class="services-details__text-1">For those diagnosed with dementia, there are things that can help manage symptoms:</p>
                             <ul class="services-details__benefit-points list-unstyled mt-20">
                                 <li>
                                     <div class="icon">
                                         <span class="fa fa-check"></span>
                                     </div>
                                     <div class="text">
-                                        <p>Cholinesterase inhibitors like donepezil are used to treat Alzheimer disease. </p>
+                                        <p>Stay physically active.</p>
                                     </div>
                                 </li>
                                 <li>
@@ -496,10 +504,131 @@
                                         <span class="fa fa-check"></span>
                                     </div>
                                     <div class="text">
-                                        <p>NMDA receptor antagonists like memantine are used for severe Alzheimer disease and vascular dementia.</p>
+                                        <p>Eat healthily.</p>
+                                    </div>
+                                </li>
+
+                                <li>
+                                    <div class="icon">
+                                        <span class="fa fa-check"></span>
+                                    </div>
+                                    <div class="text">
+                                        <p>Stop smoking and drinking alcohol.</p>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="icon">
+                                        <span class="fa fa-check"></span>
+                                    </div>
+                                    <div class="text">
+                                        <p>Get regular check-ups with your doctor.</p>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="icon">
+                                        <span class="fa fa-check"></span>
+                                    </div>
+                                    <div class="text">
+                                        <p>Write down everyday tasks and appointments to help you remember important things.</p>
+                                    </div>
+                                </li>
+
+                                <li>
+                                    <div class="icon">
+                                        <span class="fa fa-check"></span>
+                                    </div>
+                                    <div class="text">
+                                        <p>Keep up your hobbies and do things that you enjoy.</p>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="icon">
+                                        <span class="fa fa-check"></span>
+                                    </div>
+                                    <div class="text">
+                                        <p>Try new ways to keep your mind active.</p>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="icon">
+                                        <span class="fa fa-check"></span>
+                                    </div>
+                                    <div class="text">
+                                        <p>Spend time with friends and family and engage in community life.</p>
                                     </div>
                                 </li>
                             </ul>
+
+                            <p class="services-details__text-1 mt-20">Plan ahead of time. Over time, it may be harder to make important decisions for yourself or your finances:</p>
+                            <ul class="services-details__benefit-points list-unstyled mt-20">
+                                <li>
+                                    <div class="icon">
+                                        <span class="fa fa-check"></span>
+                                    </div>
+                                    <div class="text">
+                                        <p>Identify people you trust to support you in making decisions and help you communicate your choices.</p>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="icon">
+                                        <span class="fa fa-check"></span>
+                                    </div>
+                                    <div class="text">
+                                        <p>Create an advance plan to tell people what your choices and preferences are for care and support.</p>
+                                    </div>
+                                </li>
+
+                                <li>
+                                    <div class="icon">
+                                        <span class="fa fa-check"></span>
+                                    </div>
+                                    <div class="text">
+                                        <p>Bring your ID with your address and emergency contacts when leaving the house.</p>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="icon">
+                                        <span class="fa fa-check"></span>
+                                    </div>
+                                    <div class="text">
+                                        <p>Reach out to family and friends for help.</p>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="icon">
+                                        <span class="fa fa-check"></span>
+                                    </div>
+                                    <div class="text">
+                                        <p>Talk to people you know about how they can help you.</p>
+                                    </div>
+                                </li>
+
+                                <li>
+                                    <div class="icon">
+                                        <span class="fa fa-check"></span>
+                                    </div>
+                                    <div class="text">
+                                        <p>Join a local support group.</p>
+                                    </div>
+                                </li>
+                            </ul>
+                            <p class="services-details__text-1 mt-20">It is important to recognize that providing care and support for a person living with dementia can be challenging, impacting the carer’s own health and well-being. As someone supporting a person living with dementia, reach out to family members, friends, and professionals for help. Take regular breaks and look after yourself. Try stress management techniques such as mindfulness-based exercises and seek professional help and guidance if needed.</p>
+                            <h3 class="services-details__title-1">Risk factors and prevention</h3>
+                            <p class="services-details__text-1 mt-20">Although age is the strongest known risk factor for dementia, it is not an inevitable consequence of biological ageing. Further, dementia does not exclusively affect older people – young onset dementia (defined as the onset of symptoms before the age of 65 years) accounts for up to 9% of cases. Studies show that people can reduce their risk of cognitive decline and dementia by being physically active, not smoking, avoiding harmful use of alcohol, controlling their weight, eating a healthy diet, and maintaining healthy blood pressure, cholesterol and blood sugar levels. Additional risk factors include depression, social isolation, low educational attainment, cognitive inactivity and air pollution.</p>
+                            <h3 class="services-details__title-1">Late life Depression:</h3>
+                            <p class="services-details__text-1 mt-20">Late-life depression is one of the most common neuropsychiatric disorders in the elderly. Late life depression is a significant public health problem as well as a burden on patients, their families, and caregivers. There are significant associations of late life depression with medical disorders and cognitive impairment, the latter due to effects of the depression itself or association with dementia. Accurate diagnosis and treatment are of utmost importance to improve quality of life, alleviate suffering, and prevent suicide. A number of effective antidepressant medications are available; combination therapy with these medications and cognitive behavioural therapy appears most efficacious, and maintenance therapy can decrease the chances of remission.</p>
+
+                            <h3 class="services-details__title-1">Late life Depression:</h3>
+                            <p class="services-details__text-1 mt-20">Delirium is a state of heightened mental confusion that commonly affects older people admitted to hospital. Ninety six percent of cases are experienced by older people. When older people with dementia experience severe illness or trauma such as a hip fracture they are more at risk of delirium.</p>
+                            <p class="services-details__text-1 mt-20">Delirium causes great distress to patients, families and carers and has potentially serious consequences such as increased likelihood of admission to long term care and increased mortality.</p>
+                            <p class="services-details__text-1 mt-20">People who have delirium may need to stay longer in hospital or in critical care; have an increased incidence of dementia and have more hospital-acquired complications such as falls and pressure ulcers.</p>
+                            <p class="services-details__text-1 mt-20">There are many causes that may bring on a state of delirium. Most common causes in elderly.</p>
+
+                            <h3 class="services-details__title-1">GERIATRIC PSYCHIATRY ASSESMENT:</h3>
+                            <p class="services-details__text-1 mt-20">The geriatric assessment is a multidimensional, multidisciplinary assessment designed to evaluate an older person’s functional ability, physical health, cognition and mental health, and social and environmental circumstances.</p>
+                            <p class="services-details__text-1 mt-20">As the patient enters a geriatric clinic a detailed evaluation by trained psychiatrist is done including interview of patient and history from family member or caregiver followed by detailed physical and neurological examination. A proper psychological assessment including memory and neurocognitive assessment with help of standardised tests and tools is done based on the symptoms and presentation of the clinical presentation.</p>
+                            <p class="services-details__text-1 mt-20">Necessary blood investigations and brain imaging like CT brain and MRI Brain can be advised depending on the symptoms and clinical presentation of patient.</p>
+                            <p class="services-details__text-1 mt-20">Based on the clinical evaluation examination and assessment a treatment and long-term care plan is decided for individual patient including support to caregivers and family members.</p>
                         </div>
                     </div>
 
